0029350: Visualization, OpenGl_Text - add Aspect_TODT_SHADOW text style

Within new style Aspect_TODT_SHADOW, a tiny shadow is drawn at right-bottom corner
with one pixel shift, producing a slightly nicer visual look than Aspect_TODT_DEKALE.